--- a/groceryList.html
+++ b/groceryList.html
@@ -1,9 +1,7 @@
 <ul>
 	<li>Apples</li>
-<<<<<<< HEAD
-	<li>Cheese</li>
-=======
 	<li>Almond Cheese</li> 
->>>>>>> cbe2be354d8507f1898ac5260cbd6d27683df7f9
 	<li>Cookies</li>
+	<li>Latte</li>
+	<li>Rasberry</li>
 </ul>
